--- a/public/global.css
+++ b/public/global.css
@@ -1,66 +1,42 @@
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
+* {
+  /* //border: 1px dashed green; */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body {
-	color: #333;
-	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
+@media only screen and (min-width: 780px) {
+  body {
+    display: grid;
+    grid-template-columns: 1fr 1fr 10%;
+    background-image: none;
+    height: 100vh;
+  }
 
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
-}
+  .fab {
+    font-size: 25px;
+    margin-right: 15px;
+    color: #000;
+  }
 
-a:hover {
-	text-decoration: underline;
-}
+  .far {
+    font-size: 25px;
+    color: #000;
+  }
 
-a:visited {
-	color: rgb(0,80,160);
-}
+  h1 {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 2rem;
+    letter-spacing: 2px;
+  }
 
-label {
-	display: block;
-}
+  p {
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.1rem;
+    color: hsl(0, 0%, 50%);
+    margin-top: 1rem;
+  }
 
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-}
-
-input:disabled {
-	color: #ccc;
-}
-
-input[type="range"] {
-	height: 0;
-}
-
-button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
-}
-
-button:disabled {
-	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
+  
 }
