--- a/public/global.css
+++ b/public/global.css
@@ -1,12 +1,29 @@
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   font-family: "Raleway", sans-serif;
+}
+
+.video * {
+  max-width: 100%;
+}
+
+.fab {
+  font-size: 20px;
+  margin-right: 5px;
+  color: #000;
+}
+
+.far {
+  font-size: 20px;
+  color: #000;
 }
 
 @media only screen and (min-width: 780px) {
@@ -46,6 +63,5 @@ h1, h2, h3, h4 {
   .btn-container {
     margin: 20px;
     display: flex;
-    justify-content: center;
   }
 }
